Update image wpn-nginx (wpn-124-nginx-secret-001)

--- a/ansible/roles/rke2-cluster/tasks/wpn-nginx.yml
+++ b/ansible/roles/rke2-cluster/tasks/wpn-nginx.yml
@@ -22,7 +22,7 @@
           spec:
             containers:
               - name: wpn-nginx
-                image: quay-its.epfl.ch/svc0041/wpn-nginx:2024-028
+                image: quay-its.epfl.ch/svc0041/wpn-nginx:wpn-124-nginx-secret-001
                 ports:
                   - containerPort: 8080
                     protocol: TCP
