--- a/docker/nginx/conf.d/nginx-wp.conf
+++ b/docker/nginx/conf.d/nginx-wp.conf
@@ -3,52 +3,13 @@ fastcgi_buffers 16 32k;
 fastcgi_buffer_size 64k;
 fastcgi_busy_buffers_size 64k;
 
-# All the PHP traffic goes through a single entry point. This
-# avoids stat()s on NFS when we know (through regexes below)
-# that the query is for WordPress. If, on the other hand, the
-# query turns out to be for a static file, then all
-# fastcgi_param directives will have bo effect.
-fastcgi_param SCRIPT_FILENAME /wp/nginx-entrypoint/nginx-entrypoint.php;
-
-fastcgi_param QUERY_STRING       $query_string;
-fastcgi_param REQUEST_METHOD     $request_method;
-fastcgi_param REQUEST_SCHEME     $scheme;
-fastcgi_param CONTENT_TYPE       $content_type;
-fastcgi_param CONTENT_LENGTH     $content_length;
-
-fastcgi_param REQUEST_URI        $request_uri;
-fastcgi_param DOCUMENT_URI       $document_uri;
-fastcgi_param SERVER_PROTOCOL    $server_protocol;
-fastcgi_param HTTPS              on;
-
-fastcgi_param SERVER_SOFTWARE    nginx/$nginx_version;
-
-fastcgi_param REMOTE_ADDR        $remote_addr;
-fastcgi_param REMOTE_PORT        $remote_port;
-fastcgi_param SERVER_ADDR        $server_addr;
-fastcgi_param SERVER_PORT        $server_port;
-fastcgi_param SERVER_NAME        $server_name;
-
-fastcgi_param WP_ENV             test;
-
-# PHP only, required if PHP was built with --enable-force-cgi-redirect
-fastcgi_param REDIRECT_STATUS 200;
-fastcgi_param HTTP_PROXY      '';
-
+## This is needed to serve JS, CSS, ... files from the
+## WordPress source tree.
 root /wp/6;
 
 location ~ /wp-content/(uploads|wpforms|languages) {
     rewrite .*/wp-content/ / break;
     root /wp-data/$host/htdocs;
-}
-
-# PHP queries are those with no dot in them, or those that end with
-# .php:
-location ~ ^[^.]*$ {
-    fastcgi_pass unix:/run/php-fpm.sock;
-}
-location ~ \.php$ {
-    fastcgi_pass unix:/run/php-fpm.sock;
 }
 
 location ~ /\.ht {
