--- a/ansible/roles/rke2-cluster/tasks/wpn-mariadb.yml
+++ b/ansible/roles/rke2-cluster/tasks/wpn-mariadb.yml
@@ -18,7 +18,7 @@
           enabled: true
 
 
-- name: Create mariadb/databse
+- name: Create mariadb/database
   kubernetes.core.k8s:
     state: present
     definition:
