--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,18 +1,9 @@
 FROM docker-registry.default.svc:5000/wwp-test/wp-base
 
-RUN echo "deb http://nginx.org/packages/ubuntu `lsb_release -cs` nginx" > /etc/apt/sources.list.d/nginx.list
-RUN curl -fsSL https://nginx.org/keys/nginx_signing.key | apt-key add -
-
 RUN set -e -x; \
     apt-get -qy update && apt-get -qy install --no-install-recommends \
-    gettext-base \
-    libcgi-pm-perl \
-    libio-all-lwp-perl \
-    libreadonly-perl \
     msmtp \
     msmtp-mta \
-    nginx \
-    nginx-module-njs \
     php${PHP_VERSION}-fpm ; \
     apt-get -qy autoremove ; \
     apt-get clean
@@ -25,13 +16,9 @@ RUN sed -i 's|^error_log = .*|error_log = /proc/self/fd/2|' /etc/php/${PHP_VERSI
 
 COPY php.ini /etc/php/${PHP_VERSION}/fpm/conf.d/local.ini
 
-RUN sed -i 's|^listen = .*|listen = /run/php-fpm.sock|' /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf
+RUN sed -i 's|^listen = .*|listen = /run/php-fpm/php-fpm.sock|' /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf
 RUN sed -i 's|;access.log = .*|access.log = /dev/null|' /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf
 RUN echo 'catch_workers_output = yes' >> /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf
-
-# directory for custom error pages
-RUN mkdir /var/www/global-error
-COPY global-error /var/www/global-error
 
 # Band-aid for running WordPress outside of its installation directory
 # nginx-entrypoint.php takes care of the setup legwork
@@ -41,16 +28,9 @@ RUN set -e -x;                                                     \
     do echo "<?php # This wp-config.php intentionally left blank"  \
             > $wp/wp-config.php; done
 
-COPY docker-entrypoint.sh /
-RUN chmod a+x /docker-entrypoint.sh
-
-COPY nginx.conf /etc/nginx/nginx.conf
-RUN rm /etc/nginx/conf.d/*
-COPY conf.d/nginx-wp.conf /etc/nginx/conf.d/nginx-wp.conf
-
 RUN mkdir -p /wp/nginx-entrypoint/
 COPY nginx-entrypoint.php /wp/nginx-entrypoint/nginx-entrypoint.php
 
 EXPOSE 8080 8443
 
-ENTRYPOINT ["/docker-entrypoint.sh"]
+ENTRYPOINT ["bash", "-c", "exec /usr/sbin/php-fpm* -F"]
