--- a/docker/wordpress-php/Dockerfile
+++ b/docker/wordpress-php/Dockerfile
@@ -17,6 +17,7 @@ RUN sed -i 's|^error_log = .*|error_log = /proc/self/fd/2|' /etc/php/${PHP_VERSI
 COPY php.ini /etc/php/${PHP_VERSION}/fpm/conf.d/local.ini
 
 RUN sed -i 's|^listen = .*|listen = /run/php-fpm/php-fpm.sock|' /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf
+RUN echo "listen.mode = 0666" >> /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf
 RUN sed -i 's|;access.log = .*|access.log = /dev/null|' /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf
 RUN echo 'catch_workers_output = yes' >> /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf
 
