--- a/docker/wordpress-nginx/wordpress_fastcgi.conf
+++ b/docker/wordpress-nginx/wordpress_fastcgi.conf
@@ -21,3 +21,10 @@ fastcgi_param SERVER_NAME        $server_name;
 
 fastcgi_param REDIRECT_STATUS 200;
 fastcgi_param HTTP_PROXY      '';
+
+location ~ ^[^.]*$ {
+  fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
+}
+location ~ \.php$ {
+  fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
+}
