--- a/ansible/roles/rke2-cluster/vars/rke2-cluster-vars.yml
+++ b/ansible/roles/rke2-cluster/vars/rke2-cluster-vars.yml
@@ -12,3 +12,9 @@ monitoring_namespace_name: cattle-monitoring-system
 rancher_cluster_id: c-m-xrkjdvtf      # TODO: look this up
 rancher_cluster_name: wordpress-test
 
+
+
+eyaml_keys:
+  priv: "/keybase/team/epfl_wp_prod/eyaml-privkey.pem"
+  pub: "{{ playbook_dir }}/../eyaml/epfl_wp_prod.pem"
+
