[rewrite] Headless service reverse proxy

--- a/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
@@ -1,146 +1,14 @@
 ---
 # tasks for WordPress OpenShift namespaces
-
-- name: "Images and builds"
-  include_tasks:
-    file: images.yml
-    # Because `include_tasks` is dynamic, tags don't auto-inherit:
-    apply:
-      tags:
-        - images
-  tags:
-    - images
-    - images.secret
-    - images.mirror
-    - images.mirror.refresh
-    - images.build
-    - images.promote
-
-- name: "DeploymentConfigs (previously known as pods) and Services"
-  include_tasks:
-    file: k8s-objects-httpd.yml
-  loop: "{{ DeploymentConfigs.httpd }}"
-  loop_control:
-    loop_var: dc
-  tags:
-    - dc
-    - dc.redeploy
-    - httpd.secrets
-    - services
-
-- name: "Varnish"
-  include_tasks:
-    file: "varnish.yml"
-    apply:
-      tags:
-        - varnish
-  tags:
-    - varnish
-    - varnish.statefulset
-
-- name: "Static routes"
-  include_tasks:
-    file: "routes.yml"
-    apply:
-      tags:
-        - routes
-  tags:
-    - routes
-
-- name: "Continuous integration"
-  when: openshift_namespace == "wwp-test"
-  include_tasks:
-    file: continuous-integration.yml
-    apply:
-      tags:
-        - ci
-  # Multi-level tagging: `-t ci` will run all of continuous-integration.yml,
-  # while `-t ci.jenkinsfile` will only load the BuildConfig with the
-  # Jenkinsfile inside
-  tags:
-    - ci
-    - ci.rebuild
-    - ci.services
-    - ci.jenkinsfile
-
-- name: "Management container (ssh server, PHP CLI)"
-  include_tasks:
-    file: mgmt.yml
-    apply:
-      tags:
-        - mgmt
-  tags:
-    - mgmt
-    - mgmt.secrets
-
-- name: "Monitoring and disk usage report microservice"
-  when: openshift_namespace == "wwp"
-  include_tasks:
-    file: monitoring.yml
-    apply:
-      tags:
-        - monitoring
-  tags:
-    - monitoring
-    - monitoring.prometheus
-    - monitoring.pushgateway
-
-- name: "CSP Report URI"
-  include_tasks:
-    file: report-uri.yml
-    apply:
-      tags:
-        - report-uri
-  tags:
-    - report-uri
-    - report-uri.rebuild
-    - report-uri.image.promote
-
-- name: "Configure Cloudflare TLS ciphers (via API)"
-  when: openshift_namespace == "wwp"
-  include_tasks:
-    file: cloudflare-tls-settings.yml
-    apply:
-      tags:
-         - cloudflare-tls-settings
-  tags:
-    - cloudflare-tls-settings
-    - cloudflare-tls-settings.verify-token
-    - cloudflare-tls-settings.get-ciphers-setting
-    - cloudflare-tls-settings.change-ciphers-setting
-    - cloudflare-tls-settings.reset-ciphers-setting
-
-- name: "Sorry Server"
-  when: openshift_namespace == "wwp-test"
-  include_tasks:
-    file: sorryserver.yml
-    apply:
-      tags:
-        - sorryserver
-  tags:
-    - sorryserver
-
-- name: "Web2010"
-  include_tasks:
-    file: web2010.yml
-    apply:
-      tags:
-        - web2010
-  tags:
-    - web2010
-    - web2010.rebuild
-    - web2010.image.promote
-
-- name: "Menu API"
-  include_tasks:
-    file: menu-api.yml
-    apply:
-      tags:
-        - menu_api
-  tags:
-    - menu_api
-    - menu_api.cronjob
-    - menu_api.is
-    - menu_api.rebuild
-    - menu_api.redeploy
-    - menu_api.promote
+- name: "Headless Service"
+  tags: "reverseproxy"
+  kubernetes.core.k8s:
+    definition:
+      apiVersion: v1
+      kind: Service
+      metadata:
+        name: fallback-reverse-proxy
+        namespace: svc0041p-wordpress
+      spec:
+        type: ExternalName
+        externalName: 128.178.222.83
