--- a/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
@@ -12,3 +12,27 @@
       spec:
         type: ExternalName
         externalName: 128.178.222.83
+        ports:
+          - name: https
+            port: 443
+
+- name: "Default route"
+  tags: "reverseproxy"
+  kubernetes.core.k8s:
+    definition:
+      kind: Route
+      metadata:
+        name: fallback-reverse-proxy
+        namespace: svc0041p-wordpress
+        labels:
+          route: public
+      spec:
+        host: www.epfl.ch
+        to:
+          kind: Service
+          name: fallback-reverse-proxy
+        port:
+          targetPort: https
+        tls:
+          termination: edge
+          insecureEdgeTerminationPolicy: Redirect
