--- a/ansible/inventory/prod/openshift_namespaces.yml
+++ b/ansible/inventory/prod/openshift_namespaces.yml
@@ -3,7 +3,7 @@ all_openshift_namespaces:
      openshift_namespaces_prod:
        hosts:
          # wwp:
-         #   nfs_path: nas-app-ma-nfs1:/si_test_openshift_wp_jahia_app/wordpress
-         #   ansible_python_interpreter: "{{ansible_playbook_python}}"
+         #   nfs_path: nas-app-ma-nfs1:/si_test_openshift_wp_jahia_app/wordpress 
          svc0041p-wordpress:
+           ansible_python_interpreter: "{{ansible_playbook_python}}"
            
