[fix] `ExternalName` service, the right way
- We need a DNS name as `externalName`, as clarified in the
documentation
- `clientIP: None` actually doesn't work.

Thanks to Quentin Vasseur!

--- a/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
@@ -11,10 +11,10 @@
         namespace: svc0041p-wordpress
       spec:
         type: ExternalName
-        externalName: 128.178.222.83
+        externalName: www-origin.epfl.ch
         ports:
-          - name: https
-            port: 443
+        - name: https
+          port: 443
 
 - name: "Default route"
   tags: "reverseproxy"
