--- a/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
@@ -16,6 +16,24 @@
         - name: https
           port: 443
 
+- name: "fallback-reverse-proxy Endpoint"
+  # Required (for now) to trick HAProxy into doing its job; see https://access.redhat.com/solutions/6992561
+  tags: "reverseproxy"
+  kubernetes.core.k8s:
+    definition:
+      apiVersion: v1
+      kind: Endpoints
+      metadata:
+        name: fallback-reverse-proxy
+        namespace: svc0041p-wordpress
+      subsets:
+      - addresses:
+        - ip: 128.178.222.83
+        ports:
+        - name: https
+          port: 443
+          protocol: TCP
+
 - name: "fallback-reverse-proxy Route"
   tags: "reverseproxy"
   kubernetes.core.k8s:
