[fix] Task names in the configuration-as-code

--- a/ansible/roles/rke2-cluster/tasks/wpn-nginx.yml
+++ b/ansible/roles/rke2-cluster/tasks/wpn-nginx.yml
@@ -289,7 +289,7 @@
                         number: 80
 
 
-- name: IngressClass/wpn-nginx
+- name: IngressClass/wordpress
   kubernetes.core.k8s:
     state: present
     definition:
@@ -301,7 +301,7 @@
         controller: epfl.ch/ingress-wordpress
 
 
-- name: PersistentVolumeClaim/wpn-nginx
+- name: PersistentVolumeClaim/wp-uploads
   kubernetes.core.k8s:
     state: present
     definition:
