[feature] Grant access to Laurent Indermühle

--- a/ansible/inventory/rke2/hosts-test.yml
+++ b/ansible/inventory/rke2/hosts-test.yml
@@ -69,6 +69,8 @@ all:
       -
         github: williambelle
         state: present
+      - github: laurent-indermuehle
+        state: present
       - # example of revoked key
         github: crazylady2004
         state: absent
