--- a/ansible/roles/rke2-cluster/tasks/main.yml
+++ b/ansible/roles/rke2-cluster/tasks/main.yml
@@ -2,7 +2,7 @@
   tags: always
 
 
-- name: "Create {{ namespace_name }} namespace if not exists"
+- name: "{{ namespace_name }} namespace"
   kubernetes.core.k8s:
     name: "{{ namespace_name }}"
     api_version: v1
@@ -11,7 +11,7 @@
   run_once: true
 
 
-- name: "Create {{ nfs_namespace_name }} namespace if not exists"
+- name: "{{ nfs_namespace_name }} namespace"
   kubernetes.core.k8s:
     name: "{{ nfs_namespace_name }}"
     api_version: v1
@@ -23,7 +23,7 @@
 # créer le robot account avec le secret
 
 
-- name: "Create {{ monitoring_namespace_name }} namespace if not exists"
+- name: "{{ monitoring_namespace_name }} namespace"
   kubernetes.core.k8s:
     name: "{{ monitoring_namespace_name }}"
     api_version: v1
@@ -59,7 +59,7 @@
 
 # install mariadb helm
 
-- name: "Create {{ mariadb_namespace_name }} namespace if not exist"
+- name: "{{ mariadb_namespace_name }} namespace"
   kubernetes.core.k8s:
     name: "{{ mariadb_namespace_name }}"
     api_version: v1
