[rewrite] the Dockerfile
- Bye, `ubuntu:focal`!
- Pump up Node to v20.x
- Convert to two-stage build
- Upgrade Node to latest through npm, as per https://stackoverflow.com/a/76498640
- Rewrite `install-plugins-and-themes.py` into `install-wordpress.sh`
- Unpin `svg-support`, which appears to have a more recent published
version now
- Embed the plugin list in that shell script, in lieu of attempting to
replay Ansible's behavior
- Document which plugins we keep on the Scality, and why

--- a/docker/wp-base/Dockerfile
+++ b/docker/wp-base/Dockerfile
@@ -1,64 +1,18 @@
-FROM ubuntu:focal
-
-# Version pins are defined here:
-ENV PHP_VERSION=7.4
-ENV NODE_VERSION_MAJOR=20
-ARG WORDPRESS_VERSION_LINEAGES="6.1"
+FROM ubuntu:jammy AS builder
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get -qy update && \
-    apt-get -qy install ca-certificates \
-               software-properties-common apt-transport-https gnupg awscli && \
-    apt-get -qy autoremove && \
-    apt-get clean
-
-# https://github.com/curl/curl/issues/3750
-RUN set -e -x; add-apt-repository ppa:savoury1/backports; \
-  apt-get -qy update; apt-get -qy install curl
-
-RUN if [ `arch` = "aarch64" ]; then \
-     ( echo "Package: git-man"; \
-       echo "Pin: release o=LP-PPA-savoury1-backports";  \
-       echo "Pin-Priority: -1" ) > /etc/apt/preferences; \
-    fi
-
-RUN mkdir -p /etc/apt/keyrings
-RUN curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
-RUN echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_VERSION_MAJOR.x nodistro main" > /etc/apt/sources.list.d/nodesource.list
-
-RUN apt-get -qy update && apt-get  -qy install --no-install-recommends \
-    bash-completion \
-    composer \
-    git \
-    jq \
-    less \
-    nodejs \
-    php${PHP_VERSION} \
-    php${PHP_VERSION}-cli \
-    php${PHP_VERSION}-curl \
-    php${PHP_VERSION}-gd \
-    php${PHP_VERSION}-ldap \
-    php${PHP_VERSION}-mbstring \
-    php${PHP_VERSION}-mysql \
-    php${PHP_VERSION}-xml \
-    php${PHP_VERSION}-zip \
-    python3-yaml \
-    python3-requests \
-    unzip \
-    vim \
-  && \
-    apt-get -qy autoremove && \
-    apt-get clean
-
+RUN apt-get -qy update
+RUN apt-get -qy install curl
+RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
+RUN apt-get -qy install \
+    php-cli php-curl php-gd php-ldap php-mbstring php-mysql php-xml php-zip \
+    composer pipx nodejs yarn jq unzip patch git
+RUN PIPX_BIN_DIR=/usr/local/bin pipx install awscli
 
 ######################################################################
 # Install wp-cli
 ######################################################################
-
-# Travis-specific arguments — See ../../.travis.yml
-ARG GITHUB_API_USER
-ARG GITHUB_API_TOKEN
 
 # Download latest WP-CLI:
 RUN curl -o /usr/local/bin/wp https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
@@ -68,6 +22,10 @@ RUN chmod 755 /usr/local/bin/wp
 COPY ./wp-cli-config.yml /var/www/.wp-cli/config.yml
 RUN mkdir /var/www/.composer; \
     chown -R www-data:www-data /var/www/.wp-cli /var/www/.composer
+
+# Travis-specific arguments — See ../../.travis.yml
+ARG GITHUB_API_USER
+ARG GITHUB_API_TOKEN
 RUN su -s /bin/sh www-data -c " \
     set -e -x;                                                            \
     if [ -n '${GITHUB_API_TOKEN}' ]; then                                 \
@@ -77,94 +35,35 @@ RUN su -s /bin/sh www-data -c " \
     wp package install https://github.com/epfl-si/wp-cli/archive/master.zip;            \
     rm -f ~/.composer/auth.json"
 
-# Make symlinks under /var/www/.wp-cli relative (so that the
-# wp-ansible-runner image may safely move that directory to /home/runner):
-RUN set -e -x; cd /var/www/.wp-cli; find . -type l | while read l; do     \
-        target="$(realpath "$l")";                                        \
-        rel="$(realpath --relative-to="$(dirname "$(realpath -s "$l")")"  \
-                        "$target")";                                      \
-        rm "$l"; ln -s "$rel" "$l";                                       \
-    done
-
 ######################################################################
-# Install and patch WordPresses
+# Install and patch WordPresses and dependencies
 ######################################################################
-# Install multiple versions of WordPress into /wp/, and patch them to
-# support our symlink-based serving layout
-RUN set -e -x;                                                           \
-    for lineage in ${WORDPRESS_VERSION_LINEAGES}; do                     \
-        version=$(curl http://api.wordpress.org/core/stable-check/1.0/   \
-            | jq -r 'keys[]                                              \
-                      | select(match("^'${lineage}'"))'                  \
-            |sort -n -r |head -1) ;                                      \
-        mkdir -p /wp/$version ;                                          \
-        wp --allow-root --path=/wp/$version                              \
-           core download --version=$version ;                            \
-    done
 
-RUN rm -rf /wp/*/wp-content/plugins/akismet                              \
-          /wp/*/wp-content/plugins/hello.php                             \
-    /wp/*/wp-content/themes/twenty*                                      \
-    /wp/*/setup-config.php /wp/*/wp-activate.php                         \
-    /wp/*/wp-config-sample.php
+ADD http://api.wordpress.org/core/stable-check/1.0/ /tmp/wordpress-versions.json
+ADD https://api.wordpress.org/plugins/info/1.0/tinymce-advanced.json /tmp/tinymce-advanced-versions.json
 
-ADD wordpress-anywhere.patch.5.5 /tmp/
-ADD wordpress-anywhere.patch.5.8 /tmp/
-## this one fix https://core.trac.wordpress.org/ticket/57995
-## please remove after the wordpress core is updated
 ADD wordpress-TinyMCE-flickering-Firefox.patch.6 /tmp/
-RUN set -e -x;                                                               \
-    apt -qy install patch;                                                   \
-    for wp in /wp/*; do                                                      \
-        cd $wp ;                                                             \
-        major=$(echo ${wp#"/wp/"} |cut -d. -f1);                             \
-        minor=$(echo ${wp#"/wp/"}  |cut -d. -f2);                            \
-        if [ $((major)) -eq 5 ] && [ $((minor)) -lt 6 ]; then                \
-          patch -p0 -F3 < /tmp/wordpress-anywhere.patch.5.5;                 \
-        else                                                                 \
-          patch -p0 -F3 < /tmp/wordpress-anywhere.patch.5.8;                 \
-        fi;                                                                  \
-        if [ $((major)) -eq 6 ]; then                                        \
-          patch -p0 -F3 < /tmp/wordpress-TinyMCE-flickering-Firefox.patch.6; \
-          cp $wp/wp-includes/js/tinymce/plugins/wordpress/plugin.js          \
-            $wp/wp-includes/js/tinymce/plugins/wordpress/plugin.min.js;      \
-        fi;                                                                  \
-    done;                                                                    \
-    apt -qy remove --purge patch;                                            \
-    rm /tmp/wordpress-anywhere.patch.5.5;                                    \
-    rm /tmp/wordpress-anywhere.patch.5.8;                                    \
-    rm /tmp/wordpress-TinyMCE-flickering-Firefox.patch.6;
+ADD clearstatcache-wp-import.patch /tmp/
 
-######################################################################
-# Install and patch plugins and themes
-######################################################################
+COPY install-wordpress.sh /tmp
+RUN chmod +x /tmp/install-wordpress.sh
 
-ADD install-plugins-and-themes.py clearstatcache-wp-import.patch /tmp/
-# Get all plugins and themes (in "auto" mode) out of the Ansible
-# `plugins.yml` file:
-ARG INSTALL_AUTO_FLAGS
-RUN set -e -x; for wp in /wp/*; do cd $wp ;                                                      \
-        wpversion=$(echo ${wp#"/wp/"});                                                          \
-        /tmp/install-plugins-and-themes.py auto ${INSTALL_AUTO_FLAGS} --wp-version ${wpversion}; \
+ARG WORDPRESS_VERSION_LINEAGES="6.1"
+ARG AWS_ACCESS_KEY_ID
+ARG AWS_SECRET_ACCESS_KEY
+RUN set -e -x; cd /tmp;                                                  \
+    for lineage in ${WORDPRESS_VERSION_LINEAGES}; do                     \
+        version=$(jq -r 'keys[] | select(match("^'${lineage}'"))'        \
+                  < /tmp/wordpress-versions.json                         \
+                 | sort -n -r |head -1) ;                                \
+        /tmp/install-wordpress.sh /wp "$version";                        \
     done
 
-# Special treatment for tinymce-advanced, whose version scheme follows
-# WordPress' starting at 5.2... and ending at 5.6
-RUN set -e -x; for wp in /wp/*; do                                         \
-  cd $wp;                                                                  \
-  wpmajorminor="$(basename $wp | cut -d. -f1-2)";                          \
-  curl -q https://api.wordpress.org/plugins/info/1.0/tinymce-advanced.json \
-  | jq -r '.versions | to_entries as $versions | $versions                 \
-         | map(select (.key | startswith("'$wpmajorminor'"))) as $matches  \
-         | if ($matches | length) == 0 then                                \
-                $versions | map(select(.key | match("^[0-9.]+$")))         \
-           else $matches end                                               \
-         | map(.value) | last '                                            \
-     | xargs -t -i curl -o tinymce-advanced.zip {} ;                       \
-  rm -rf wp-content/plugins/tinymce-advanced;                              \
-  (cd wp-content/plugins; unzip ../../tinymce-advanced.zip);               \
-  rm tinymce-advanced.zip;                                                 \
-  done
+RUN rm /tmp/*.patch* /tmp/*.sh /tmp/*.json
+
+######################################################################
+# Build and install JavaScript / CSS assets
+######################################################################
 
 # build wp-gutenberg-epfl
 RUN set -e -x; for wp in /wp/*; do                                         \
@@ -173,26 +72,7 @@ RUN set -e -x; for wp in /wp/*; do                                         \
       rm -rf build; npm i --no-fund; npm run build; rm -rf node_modules);  \
   done
 
-RUN set -e -x; for wp in /wp/*; do                                       \
-        cd $wp/wp-content/plugins ;                                      \
-        /tmp/install-plugins-and-themes.py                               \
-            wordpress-importer wordpress.org/plugins ;                   \
-        cd wordpress-importer ;                                          \
-        git apply < /tmp/clearstatcache-wp-import.patch ;                \
-    done;                                                                \
-    rm /tmp/clearstatcache-wp-import.patch
-
-RUN rm /tmp/install-plugins-and-themes.py
-
-# Prevent directory listings in the mu-plugins/ subdirectories of sites:
-RUN set -e -x; for wp in /wp/*; do                                       \
-        cd $wp/wp-content ;                                              \
-        cp plugins/index.php mu-plugins/index.php ;                      \
-    done
-
-######################################################################
-# Home built Elements
-######################################################################
+# build epfl-elements
 ARG ELEMENTS_GIT_REPOSITORY=""
 ARG ELEMENTS_GIT_REF="dev"
 RUN set -e -x;   env; \
@@ -202,8 +82,7 @@ RUN set -e -x;   env; \
     cd /tmp/elements_build; \
     npm install --global yarn; \
     yarn; yarn build; \
-    for wp in /wp/*; do cp -a dist/ $wp/wp-content/themes/wp-theme-2018/assets; done ; \
-    cd; rm -rf /tmp/elements_build
+    for wp in /wp/*; do cp -a dist/ $wp/wp-content/themes/wp-theme-2018/assets; done
 
 ######################################################################
 # Symlinks in /wp
@@ -211,3 +90,10 @@ RUN set -e -x;   env; \
 # We do that last for simplicity, at a small cost in build time
 COPY symlink-wp-versions.sh /tmp
 RUN sh /tmp/symlink-wp-versions.sh && rm /tmp/symlink-wp-versions.sh
+
+FROM scratch
+
+COPY --from=builder /wp /wp
+COPY --from=builder /usr/local/bin/wp /usr/local/bin/wp
+COPY --from=builder /var/www/.composer/ /var/www/.composer/
+COPY --from=builder /var/www/.wp-cli/ /var/www/.wp-cli/
